// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormElement /> Should hide placeholder with hasValue 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={true}
  htmlFor="test-input"
  isFocused={false}
  label="testlabel"
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="testlabel"
      visible={false}
    >
      <div
        aria-hidden={true}
        className="css-qq9d2l css-1jyyyen placeholder"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={true}
      isFocused={false}
      label="testlabel"
      labelStatic={false}
    >
      <label
        className="css-1nn9zl4 css-1r91c0g css-1jyyyen label floating"
        htmlFor="test-input"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a focused form element 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={true}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={true}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with 1 child 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <input
      key="test-key"
    />
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with no children 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the error message 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText="The error text"
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-state-alert, #ff0000)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      ariaHidden={false}
      className={null}
      elementName="test-input"
      errorText="The error text"
      translate={true}
    >
      <div
        aria-atomic="true"
        aria-hidden={false}
        aria-live="assertive"
        className="css-1tzi51f errorText"
        id="ariaError-test-input"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The error text"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The error text
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the label 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label="The label"
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="The label"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-qq9d2l placeholder"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label="The label"
      labelStatic={false}
    >
      <label
        className="css-1nn9zl4 css-1jyyyen label"
        htmlFor="test-input"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the placeholder text 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder="The placeholder"
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="The placeholder"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-qq9d2l placeholder"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The placeholder"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The placeholder
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;
